--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,6 @@ img {
 
 .subscribe-button {
   display: inline-flex;
-  flex-direction: row-reverse;
   align-items: center;
   border: none;
   margin-left: 12px;
@@ -788,7 +787,6 @@ img {
   transform: scale(1) translate(-50%, -50%);
 
   width: 528px;
-  height: 581px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -798,8 +796,6 @@ img {
 }
 
 .modal-form {
-  width: 100%;
-  outline: 1px solid tomato;
   padding: 40px;
 }
 
@@ -815,9 +811,20 @@ img {
 
 .form-field {
   position: relative;
-  outline: 1px solid blueviolet;
   display: flex;
   margin-bottom: 28px;
+}
+
+.form-field:last-child {
+  margin-bottom: 20px;
+}
+
+.form-field:focus-within > .modal-svg {
+  fill: var(--accent-color);
+}
+
+.modal-input:hover {
+  cursor: pointer;
 }
 
 .form-label {
@@ -837,6 +844,7 @@ img {
   left: 14px;
 
   transform: translateY(-50%);
+  transition: fill 250ms var(--timing-function);
 }
 
 .modal-input {
@@ -846,14 +854,107 @@ img {
   font-size: 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
+
+  transition: border 250ms var(--timing-function);
+}
+
+.form-field:focus-within > .modal-input {
+  border: 1px solid var(--accent-color);
 }
 
 .form-comment {
   width: 100%;
+  height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+}
+
+.checkbox-field {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-left: 14px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.checkbox:checked ~ .icon-check {
+  opacity: 1;
+}
+
+.checkbox:checked + .icon-frame {
+  opacity: 0;
+}
+
+.icon-frame {
+  margin-right: 7px;
+  opacity: 1;
+  transition: opacity 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
+}
+
+.checkbox:focus + .icon-frame {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
+.icon-check {
+  position: absolute;
+  opacity: 0;
+  transition: opacity 250ms var(--timing-function);
+}
+
+.checkbox-label {
+  line-height: 1.71;
+  color: var(--secondary-text-color);
+}
+
+.terms-link {
+  margin-left: 4px;
+
+  line-height: 1.71px;
+  color: var(--accent-color);
+}
+
+.send-button {
+  padding: 10px 55px;
+  margin-left: auto;
+  margin-right: auto;
+
+  display: flex;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: var(--white-color);
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  transition: background-color 250ms var(--timing-function);
+}
+
+.send-button:hover,
+.send-button:focus {
+  background-color: #188ce8;
+  cursor: pointer;
 }
 
 .close-button {
